@@ -1,3 +1,8 @@
+2003-06-30  Jerry Quinn  <jlquinn@optonline.net>
+
+	* src/locale.cc (__use_cache<numpunct>): Revert previous relocation.
+	* include/bits/locale_facets.tcc (__use_cache<numpunct>): Ditto.
+
 2003-06-30  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* 27_io/basic_filebuf/seekoff/char/1-in.cc: New.
